--- a/Resources/app/storefront/src/scss/component/_filter-rating-select.scss
+++ b/Resources/app/storefront/src/scss/component/_filter-rating-select.scss
@@ -8,4 +8,8 @@
 
 .filter-rating-select-list-item {
     margin-left: 12px;
+
+    .filter-rating-select-item-label-text {
+        display: none;
+    }
 }
